# quantum-sim-group-81

./: README.md
.github/workflows/: rust.yml
Project Plan/: delimitations.tex  main.tex
backend/: Cargo.toml  backend_readme  backend_readme.md
backend/src/: main.rs  simulator.rs
backend/src/simulation/: circuit_parser.rs  circuit_tests  circuit_validator.rs  mod.rs  quantum_gate.rs  quantum_state.rs  simulator.rs  utils.rs
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  circuitboard.css  circuitboard.tsx  gate.css  gate.tsx  placedGate.tsx  slider.css  slot.css  slot.tsx  toolbar.css  toolbar.tsx
client/src/components/: circuitboard.css  circuitboard.test.tsx  circuitboard.tsx  gate.tsx  toolbar.css  toolbar.tsx
projectplan/: background.tex  ethics.tex  main.tex  method.tex  packages.tex  problem.tex  purpose.tex  references.bib  robin feedback.tex  scope.tex  timeplan.tex
