[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
num = { version = "0.4.1", features = ["serde"] }
ndarray = {version =  "0.15.6", features = ["serde"] }
rand = "0.8.5"
